projectmonitoring/webex-receiver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webex-receiver
  name: webex-receiver
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webex-receiver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webex-receiver
    spec:
      containers:
      - image: mtr.devops.telekom.de/mcsps/webhook-webex:2.0.0
        imagePullPolicy: IfNotPresent
        name: webex
        ports:
          - containerPort: 9091
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsGroup: 1001
          runAsUser: 1001
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webex-receiver
  name: webex-receiver
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webex-receiver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webex-receiver
    spec:
      containers:
      - image: mtr.devops.telekom.de/mcsps/webhook-webex:2.0.0
        imagePullPolicy: IfNotPresent
        name: webex
        ports:
          - containerPort: 9091
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsGroup: 1001
          runAsUser: 1001
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
